--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 :root{
-    --fonte-principal:"PT Serif";
+    --fonte-principal:"Lobster";
     --branco: white;
     --cor-de-fundo: #00162E;
     --borda: #0075FF;
