--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lobster&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-:root{
-    --fonte-principal:'Lobster';
+.titulo {
+    color: rgb(red, green, blue);
+    text-align: center;
+    font-family: 'Dancing Script';
+    font-size: 100px;
+}
+.subtitulo {
+    color: rgb(red, green, blue);
+    text-align: center;
+    font-family: 'Dancing Script';
+    font-size: 40px; 
 }
