--- a/style.css
+++ b/style.css
@@ -3,12 +3,12 @@
     --branco: white;
     --cor-de-fundo: #00162E;
     --borda: #0075FF;
-    --roboto-mono; 'Roboto Mono', monospace;
-    --roboto:'Roboto', sans-serif;
+    --roboto-mono: 'Roboto Mono', monospace;
 }
 .titulo-principal {
     font-family: var(--roboto-mono);
     font-size: 32px;
+    text-align: center;
 }
 .titulo-secundario{
     font-size: 24px;
