--- a/style.css
+++ b/style.css
@@ -12,4 +12,9 @@
 }
 .titulo-secundario{
     font-size: 24px;
+    font-family: var(--roboto-mono);
+    text-align: center;
+}
+.logo{
+    text-align: center;
 }
