--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 :root{ 
     --branco: white;
     --cor-de-fundo: #00162E;
     --borda: #0075FF;
-    --roboto-mono: 'Roboto Mono', monospace;
+    --fonte-titulo: 'Dancing Script';
 }
 .titulo-principal {
-    font-family: var(--roboto-mono);
+    font-family: var(--fonte-titulo);
     font-size: 32px;
     text-align: center;
 }
