--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     font-family: var(--fonte-titulo);
     font-size: 32px;
     text-align: center;
+    display: grid;
 }
 .titulo-secundario{
     font-size: 24px;
