--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
     font-family: var(--fonte-titulo);
     font-size: 32px;
     text-align: center;
-    display: grid;
+    display: flex;
 }
 .titulo-secundario{
     font-size: 24px;
