--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
     font-family: var(--fonte-titulo);
     font-size: 32px;
     text-align: center;
-    display: flex;
 }
 .titulo-secundario{
     font-size: 24px;
@@ -20,4 +19,7 @@
     text-align: right;
     width: 300px;
     height: 300px;
+}
+.cabecalho2{
+    display: grid;
 }
