--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@
     font-family: var(--fonte-titulo);
     text-align: center;
 }
+.inicio{
+    text-align: center;
+}
 .logo{
     width: 300px;
     height: 300px;
-    justify-content: center;
-    align-items: center;
 }
