--- a/style.css
+++ b/style.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
 :root{ 
     --branco: white;
     --cor-de-fundo: #00162E;
     --fonte-titulo: 'Dancing Script';
+    --fonte-titulo2: 'DynaPuff';
 }
 body{
     background-color: #FFFAF2;
 }
 .titulo-principal {
-    font-family: var(--fonte-titulo);
+    font-family: var(--fonte-titulo2);
     font-size: 32px;
     text-align: center;
 }
