--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body{
 }
 .titulo-principal {
     font-family: var(--fonte-titulo2);
-    font-size: 32px;
+    font-size: 40px;
     text-align: center;
 }
 .titulo-secundario{
@@ -25,4 +25,13 @@ body{
 .logo{
     width: 300px;
     height: 300px;
+}
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #4CAF50;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
 }
