--- a/style.css
+++ b/style.css
@@ -16,16 +16,20 @@ body{
 }
 
 .imagem-header {
-    width: 100px; 
+    width: 300px; 
     height: auto; 
     margin-right: 20px; 
 }
 
 .texto-header h1 {
-    margin: 0; 
+    margin: 0;
+    font-family: var(--fonte-titulo2); 
+    font-size: 40px;
 }
 
 .texto-header h2 {
     margin: 0; 
     color: gray; 
+    font-family: var(--fonte-titulo);
+    font-size: 24px;
 }
