--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body{
     margin: 0;
     font-family: var(--fonte-titulo2); 
     font-size: 100px;
-    color: #9D613F;
+    color: #e634a1;
 }
 
 .texto-header h2 {
