--- a/style.css
+++ b/style.css
@@ -9,26 +9,26 @@
 body{
     background-color: #FFFAF2;
 }
-.header {
+.inicio {
     display: flex;
     align-items: center;
     margin: 20px; 
 }
 
-.imagem-header {
+.logo {
     width: 400px; 
     height: auto; 
     margin-right: 50px; 
 }
 
-.texto-header h1 {
+.titulo-principal h1 {
     margin: 0;
     font-family: var(--fonte-titulo2); 
     font-size: 100px;
     color: #EB8D96;
 }
 
-.texto-header h2 {
+.titulo-principal h2 {
     margin: 0; 
     color: #EB8D96;
     font-family: var(--fonte-titulo);
