--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=DynaPuff:wght@400..700&display=swap');
+
 :root{ 
     --branco: white;
     --cor-de-fundo: #00162E;
-    --fonte-titulo: 'Dancing Script';
-    --fonte-titulo2: 'DynaPuff';
+    --fonte-titulo2: 'Dancing Script';
+    --fonte-titulo: 'DynaPuff';
+    --fonte-texto: 'Asap'
 }
 body{
     background-color: #FFFAF2;
@@ -23,7 +26,7 @@ body{
 
 .titulo-principal h1 {
     margin: 0;
-    font-family: var(--fonte-titulo2); 
+    font-family: var(--fonte-titulo); 
     font-size: 100px;
     color: #EB8D96;
 }
@@ -31,7 +34,13 @@ body{
 .titulo-principal h2 {
     margin: 0; 
     color: #EB8D96;
-    font-family: var(--fonte-titulo);
+    font-family: var(--fonte-titulo2);
     font-size: 50px;
    
+}
+
+.texto1 {
+    color: #3D3D3D;
+    font-family: var(--fonte-texto);
+    text-align: center;
 }
