--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ body{
     margin: 20px;
     color: #3D3D3D;
     margin: 50px;
-    font-size: var(--fonte-texto);
+    font-family: var(--fonte-texto);
+    font-size: 50px;
 }
 
