--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --cor-de-fundo: #00162E;
     --fonte-titulo2: 'Dancing Script';
     --fonte-titulo: 'DynaPuff';
-    --fonte-texto: 'Asap'
+    --fonte-texto: 'Asap';
 }
 body{
     background-color: #FFFAF2;
