--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
 .texto01 h1 {
     text-align: center;
     margin: 20px;
-    color: #3D3D3D;
+    color: #9D613F;
     margin: 50px;
     font-family: var(--fonte-texto);
     font-size: 30px;
